--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
        </div>
        <div class="more-about">
-       <a href="about.php">More About Me</a>
+       <a href="about.html">More About Me</a>
        </div>
 
 
